--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -31,7 +31,7 @@
   font-weight: lighter;
 }
 
-.carousel-img{
+.carousel-img {
   width: 100%;
   max-height: 550px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -54,6 +54,12 @@
 
 .details-card ul {
   width: 100%;
+}
+
+@media (max-width: 575px) {
+  .details-card li, .details-card p {
+    font-size: 12px;
+  }
 }
 
 .show-body-wrapper {
@@ -121,92 +127,3 @@
     // overflow-x: auto; /* Allow horizontal scrolling if content overflows */
   }
 }
-
-
-
-
-
-
-
-
-
-
-// #cardProduct{
-//   width: 100%;
-//   height: 100%;
-//   border:2px solid #fff;
-//   background: url(img/tiger.png) no-repeat;
-//   -moz-box-shadow: 10px 10px 5px #ccc;
-//   -webkit-box-shadow: 10px 10px 5px #ccc;
-//   box-shadow: 10px 10px 5px #ccc;
-//   -moz-border-radius:25px;
-//   -webkit-border-radius:25px;
-//   border-radius:25px;
-// }
-
-// .text-center {
-//   text-align: center;
-// }
-
-// #title{
-//   margin-bottom: 50px;
-// }
-
-// #specs{
-//   font-size: 25px;
-//   border-radius: 16px;
-//   padding: 15px 15px;
-// }
-// .p-3 {
-//   padding: 2rem !important;
-// }
-
-// .row{
-//   align-items: center;
-// }
-
-
-// #product_card img{
-//   height: 150px;
-//   width: 200px;
-//   border-radius: 58px;
-//   padding-bottom: 30px;
-// }
-
-
-
-.showcontainer{
-  width: 100vw;
-  margin-top: 8rem;
-}
-.computer_img img{
-  border-radius: 8px;
-}
-.secondcontainer{
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 50px;
-}
-.computer_map{
-  margin-left: 8rem;
-  background: #FDF9FA;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  display: flex;
-  align-items: center;
-  border-radius: 8px;
-  // border: 2px solid #3B0071;
-  padding-right: 8px;
-}
-
-.container-map {
-  width: 100%;
-  height: 340px;
-  border: 2px solid #bcbaba;
-  border-radius: 8px;
-}
-
-
-// .name-owner-wrapper {
-//   display: flex;
-//   justify-content: start;
-// }
